package/styles/popup.css
/* ... */
@layer Components {
  .heading-l2 {
    color: var(--color-heading-text);
    font-size: 0.625rem;
    font-weight: bold;
    margin: 0 0 0.75rem;

    &[data-i18n='layout_heading_form'] {
      margin-bottom: 0.5rem;
    }
  }

  .filter {
    padding: 0.375rem 0.625rem 0.625rem;
    color: var(--color-filter-text);
    background: var(--color-filter-bg);
    border-radius: 4px;
    border: 1px solid var(--color-border);

    input {
      border-left: 0;
    }

    .filter__title {
      display: flex;
      justify-content: space-between;
      align-items: center;
      width: stretch;
      line-height: 1.6;
      font-size: var(--fz-label);
      margin: 0 0 var(--mb-label);
    }

    .filter__result {
      font-size: 0.625rem;
    }

    .filter__content {
      display: flex;
      flex-wrap: wrap;

      > p:last-child {
        flex-grow: 1;
      }

      :focus {
        position: relative;
        z-index: 1;
      }
    }
  }

  .status {
    text-align: right;
    font-size: 0.625rem;
    padding: 0 1px 0 0;
    margin: 0.125rem 0 1.625rem;
  }

  .rule__edit {
    &::before {
      display: block;
      content: '';
      position: absolute;
      width: 100%;
      height: 100%;
      inset: 0;
      opacity: 0;
    }

    &:focus-visible {
      box-shadow: none;

      &::before {
        outline: none;
        box-shadow: 0 0 0 3px var(--color-outline);
      }
    }

    &:focus&::before,
    &:hover&::before {
      opacity: 1;
    }
  }

  .rule {
    .rule__header {
      display: flex;
      flex-wrap: wrap;
      align-items: baseline;
      justify-content: space-between;
      gap: 0.5em;
      padding: 0.375rem 0;
      position: sticky;
      top: 0;
      background-color: var(--color-bg);
      z-index: 1;

      h3 {
        margin: 0;
        text-align: right;
        line-height: 1.4;

        code {
          font-family: monospace;
          font-weight: bold;
          overflow-wrap: anywhere;
          padding: 0.1em 0.4em;
          border-radius: 0.25em;
          background-color: var(--color-code-bg);
          color: var(--color-code-text);
        }
      }

      .rule__actions {
        display: flex;
        gap: 0.375em;
        flex-shrink: 0;
        margin: 0 0 0 auto;
      }

      button {
        padding: 0.5rem;
        display: grid;
        grid-template-columns: 1rem 1fr;
        gap: 0.25rem;
        place-items: center;
        line-height: 1;

        img {
          display: block;
          width: 1rem;
          height: 1rem;
        }

        &[data-action='delete'] {
          grid-template-columns: 1rem 1fr;
        }

        &.of-toggle {
          padding-inline: 0.5625rem;

          [data-group-status='mixed'] & .inactive,
          [data-group-status='inactive'] & .inactive {
            display: none;
          }

          [data-group-status='active'] & .active {
            display: none;
          }
        }
      }
    }

    .rule__table {
      margin: 0 0 2rem;
      width: 100%;
      table-layout: fixed;
      border-collapse: collapse;

      th,
      td {
        border: 1px solid var(--color-table-border);
        padding: 0.25em 0.5em;
      }

      tr {
        position: relative;
      }

      tr:hover {
        background: var(--color-table-row-hover-bg);
      }

      td {
        &.of-remove {
          text-align: center;
        }

        &:last-child {
          /* max-width: 0;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap; */
        }
      }

      thead {
        background-color: var(--color-table-head-bg);

        th {
          text-align: center;
        }
      }

      tbody {
        th,
        td {
          overflow-wrap: anywhere;
        }

        tr:has(:focus) {
          background: var(--color-table-row-hover-bg);
        }

        tr:has([aria-pressed='true']) {
          background: var(--color-table-row-edit-bg);
        }
      }

      button {
        all: unset;
        display: block;
        width: 100%;
      }

      &:last-child {
        margin-bottom: var(--content-bottom-margin);
      }
    }

    @media screen and (min-width: 25rem) {
      .rule__table {
        th,
        td {
          &:nth-child(1) {
            width: 12em;
          }

          &:nth-child(2) {
            width: 6em;
            text-align: center;
          }
        }
      }
    }
  }

  .form {
    > *:not(:first-child) {
      margin: 0.75rem 0 0;
    }

    .form__actions {
      margin: var(--content-bottom-margin) 0 0;
      display: grid;
      grid-template-columns: 1fr 1fr;
      gap: 0.5rem;
    }

    button {
      padding: 0.5em;
    }
  }

  .modal {
    max-width: 25rem;
    padding: 1rem 1.5rem;
    color: var(--color-text);
    text-align: center;
    font-size: 0.75rem;
    background: var(--color-bg);
    border: 1px solid var(--color-border);
    border-radius: 4px;
    box-shadow: 0 0 10px 0 rgb(0 0 0 / 40%);

    .modal__heading {
      font-size: 0.875rem;
      margin: 0 0 1rem;
    }

    .modal__data {
      margin: 0 0 1.25rem;

      p {
        overflow-wrap: anywhere;
      }
    }

    .modal__message {
      margin: 0 0 1.25rem;
      white-space: pre-line;
    }

    .modal__actions {
      display: flex;
      gap: 0.5rem;
      justify-content: center;
      max-width: 12.5rem;
      margin: auto;

      button {
        flex: 1;
        padding: 0.5em;
      }
    }
  }
}

/* -----------------------------------------------------------------------------
 * Status
 * -------------------------------------------------------------------------- */
.field-url,
.field-regexp {
  display: none;
}

[data-match-type='url'] .field-url,
[data-match-type='prefix'] .field-url,
[data-match-type='regexp'] .field-regexp {
  display: block;
}

[data-operation='remove'] .field-value {
  visibility: hidden;
}
/* ... */

